# second-brain-navi

./: .env.example  .gitignore  00_project_manifest.md  Makefile  README.md  docker-compose.yml  instructions.md
brain-core/: Dockerfile  alembic.ini  pyproject.toml
brain-core/src/: db.py  main.py  prompt_service.py  settings.py  validation_service.py
brain-core/src/models/: assets.py
brain-core/src/pipeline/: state_machine.py
brain-core/src/routers/: assets.py  health.py  kanban.py  knowledge_areas.py  queue.py  relationships.py  search.py  skills.py
brain-core/src/schemas/: enriched.py
brain-core/src/services/: llm_service.py  prompt_service.py
db/migrations/: V001__init.sql
docs/: _claude_report.md  api.md
mcp-server/: Dockerfile  pyproject.toml  server.py
schemas/: enriched_contract.example.json  enriched_contract.schema.json
skills/resumen_ejecutivo/: prompt_template.txt  skill.md
