[project]
name = "brain-core"
version = "0.1.0"
description = "Second Brain Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "jsonschema>=4.20.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.6",
]

[tool.setuptools.packages.find]
where = ["."]
