[project]
name = "second-brain-mcp"
version = "0.1.0"
description = "Second Brain MCP Server — exposes Second Brain tools via Model Context Protocol"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
